--- a/components/banner.html
+++ b/components/banner.html
@@ -129,6 +129,51 @@
             </div>
         </section>
 
+        <section class="banner text__center base">
+            <div class="an-container banner__info">
+                <h1 class="banner__title">Banner Component</h1>
+            </div>
+        </section>
+
+        <section class="banner text__center dark">
+            <div class="an-container banner__info">
+                <h1 class="banner__title">Banner Component</h1>
+            </div>
+        </section>
+
+        <section class="banner text__center darkest">
+            <div class="an-container banner__info">
+                <h1 class="banner__title">Banner Component</h1>
+            </div>
+        </section>
+
+        <section class="banner__image">
+            <img src="/assets/img/projects/project3.jpg" alt="#" />
+            <div class="banner__image-overlay">
+                <div class="banner__image-overlay-info">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h1 class="banner__title">Banner Image Component</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="banner__image">
+            <img src="/assets/img/projects/project3.jpg" alt="#" />
+            <div class="banner__image-overlay">
+                <div class="banner__image-overlay-info">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h1 class="banner__title">Banner Image Component</h1>
+                            <p class="banner__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium voluptatum eos animi earum ratione ipsum?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <div style="height: 100vh; width: 100%;"></div>
 
         <footer class="footer">
