--- a/assets/css/components/_banner.scss
+++ b/assets/css/components/_banner.scss
@@ -23,22 +23,53 @@
         background-color: var(--primary-darkest);
     }
 
-    &.image {
-        background-image: linear-gradient(rgba(0,0,0,0.35),rgba(0,0,0,0.35)), url(/assets/img/banner-2.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+    &__image {
+        position: relative;
+        border-radius: 10px;
+        height: 400px;
+        overflow: hidden;
+        padding: 0;
 
-        // &::after {
-        //     content: "";
-        //     display: block;
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     width: 100%;
-        //     height: 100%;
-        //     background-color: rgba(0,0,0,0.25);
-        // }
+        img {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            -o-object-fit: cover;
+            object-fit: cover;
+            -o-object-position: center center;
+            object-position: center center;
+            border-radius: 0;
+        }
+
+        &.h-500 {
+            height: 500px !important;
+        }
+
+        &-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            // background: linear-gradient(180deg, rgba(0, 0, 0, 0) 46.88%, rgba(214, 195, 145, 0.46) 93.23%);
+            background: rgba(0,0,0,0.6);
+            border-radius: 10px;
+            padding: 2rem;
+
+            &-info {
+                display: block;
+                text-align: center;
+
+                .row {
+                    justify-content: center;
+                }
+            }
+        }
     }
 
     &__info {
