--- a/assets/css/components/_recruitmentCard.scss
+++ b/assets/css/components/_recruitmentCard.scss
@@ -3,6 +3,7 @@
     background-color: var(--primary-light);
     color: var(--white-color);
     margin-bottom: 2rem;
+    border-radius: 10px;
 
     a {
         color: var(--secondary-color);
@@ -27,6 +28,7 @@
         padding: 5px 20px;
         display: inline-block;
         margin-bottom: 1rem;
+        border-radius: 5px;
     }
 
     &-title {
@@ -49,6 +51,7 @@
     &-btn, .button {
         background-color: var(--primary-light);
         color: var(--white-color);
+        border-radius: 5px;
 
         &:hover, &:focus {
             background-color: var(--white-color);
