--- a/assets/css/recruitment.css
+++ b/assets/css/recruitment.css
@@ -75,6 +75,7 @@
   background-color: var(--primary-light);
   color: var(--white-color);
   margin-bottom: 2rem;
+  border-radius: 10px;
 }
 
 .recruitment__card a {
@@ -102,6 +103,7 @@
   padding: 5px 20px;
   display: inline-block;
   margin-bottom: 1rem;
+  border-radius: 5px;
 }
 
 .recruitment__card-title {
@@ -124,6 +126,7 @@
 .recruitment__card-btn, .recruitment__card .button {
   background-color: var(--primary-light);
   color: var(--white-color);
+  border-radius: 5px;
 }
 
 .recruitment__card-btn:hover, .recruitment__card-btn:focus, .recruitment__card .button:hover, .recruitment__card .button:focus {
