--- a/assets/css/components/_gallery.scss
+++ b/assets/css/components/_gallery.scss
@@ -2,13 +2,39 @@
     &__grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+        grid-auto-flow: dense;
         gap: 2rem;
 
         &-item {
             overflow: hidden;
+            height: 300px;
 
             img {
                 display: block;
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                object-position: center center;
+                border-radius: 10px;
+            }
+
+            @media screen and (min-width: 640px) {
+                height: 250px;
+
+                &.colspan {
+                    grid-column: span 2;
+                }
+
+                &.rowspan {
+                    grid-row: span 2;
+                    height: auto;
+                }
+
+                &.square {
+                    grid-column: span 2;
+                    grid-row: span 2;
+                    height: auto;
+                }
             }
         }
     }
