--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -3,14 +3,41 @@
   display: grid;
   -ms-grid-columns: (minmax(210px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+  grid-auto-flow: dense;
   gap: 2rem;
 }
 
 .gallery__grid-item {
   overflow: hidden;
+  height: 300px;
 }
 
 .gallery__grid-item img {
   display: block;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+  border-radius: 10px;
+}
+
+@media screen and (min-width: 640px) {
+  .gallery__grid-item {
+    height: 250px;
+  }
+  .gallery__grid-item.colspan {
+    grid-column: span 2;
+  }
+  .gallery__grid-item.rowspan {
+    grid-row: span 2;
+    height: auto;
+  }
+  .gallery__grid-item.square {
+    grid-column: span 2;
+    grid-row: span 2;
+    height: auto;
+  }
 }
 /*# sourceMappingURL=gallery.css.map */
