--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -94,8 +94,7 @@
         }
 
         .header__toggle {
-            padding-top: 0.5rem;
-            padding-bottom: 0.5rem;
+            height: 23px;
 
             span {
                 &:nth-child(1) {
